@@ -44,7 +44,7 @@ public class GeminiService {
     public String getCompletion(String text) {
         GeminiResponse response = getCompletion(new GeminiRequest(
                 List.of(new Content(List.of(new TextPart(text))))));
-        return response.candidates().getFirst().content().parts().getFirst().text();
+        return response.candidates().get(0).content().parts().get(0).text();
     }
 
     public String getCompletionWithImage(String text, String imageFileName) throws IOException {
@@ -56,6 +56,6 @@ public class GeminiService {
                                         Path.of("src/main/resources/", imageFileName))))))
                 ))));
         System.out.println(response);
-        return response.candidates().getFirst().content().parts().getFirst().text();
+        return response.candidates().get(0).content().parts().get(0).text();
     }
 }
